# mini-reach

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
mini_reach/: __init__.py  cli.py  core.py  mcp_server.py
mini_reach/channels/: __init__.py  base.py  bilibili.py  github.py  rss.py  web.py  youtube.py
tests/: test_channels.py
